--- a/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
+++ b/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/aberer/nltk_data...\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -46,7 +46,7 @@
     "    return \" \".join([stemmer.stem(word.lower()) for word in tokens])\n",
     "\n",
     "# Read a list of documents from a file. Each line in a file is a document\n",
-    "with open(\"bread.txt\") as f:\n",
+    "with open(\"epfldocs.txt\") as f:\n",
     "# with open(\"epfldocs.txt\") as f:\n",
     "    content = f.readlines()\n",
     "original_documents = [x.strip() for x in content] \n",
@@ -132,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def expand_query(relevant_doc_vecs, non_relevant_doc_vecs, query_vector, alpha, beta, gamma):\n",
@@ -144,19 +142,19 @@
     "    num_non_rel = len(non_relevant_doc_vecs)\n",
     "    \n",
     "    # Compute the first term in the Rocchio equation\n",
-    "    norm_query_vector = ...\n",
+    "    norm_query_vector = alpha * query_vector\n",
     "    \n",
     "    # Compute the second term in the Rocchio equation\n",
-    "    norm_sum_relevant = ...\n",
+    "    norm_sum_relevant = [(beta / num_rel) * sum(x) for x in zip(*relevant_doc_vecs)]\n",
     "    \n",
     "    # Compute the last term in the Rocchio equation\n",
-    "    norm_sum_non_relevant = ...\n",
+    "    norm_sum_non_relevant = [(gamma / num_non_rel) *sum(x) for x in zip(*non_relevant_doc_vecs)] \n",
     "    \n",
     "    # Sum all the terms\n",
-    "    modified_query_vector = ...\n",
+    "    modified_query_vector = [x + y - z for x,y,z in zip(norm_query_vector,norm_sum_relevant,norm_sum_non_relevant)]\n",
     "    \n",
     "    # Ignore negative elements\n",
-    "    modified_query_vector = ...\n",
+    "    modified_query_vector = [x if x>=0 else 0 for x in modified_query_vector]\n",
     "    return modified_query_vector"
    ]
   },
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +229,7 @@
        " 'Fantastic! Primates Regain Control of Paralyzed Limb https://t.co/BtfMCSW0xP via @EPFL_en #VDtech https://t.co/EeK6g1Vnm5']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
