--Exercise 1 Task 1 Revision

--- a/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
+++ b/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
@@ -133,7 +133,7 @@
     "    if sumxy == 0:\n",
     "            result = 0\n",
     "    else:\n",
-    "            result =  sumxy / (math.sqrt(sumxx) + math.sqrt(sumyy))\n",
+    "            result =  sumxy / (math.sqrt(sumxx*sumyy)))\n",
     "    \n",
     "    return result\n",
     "\n",
