--- a/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
+++ b/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
     "    if sumxy == 0:\n",
     "            result = 0\n",
     "    else:\n",
-    "            result =  sumxy / (math.sqrt(sumxx*sumyy)))\n",
+    "            result =  sumxy / (math.sqrt(sumxx*sumyy))\n",
     "    \n",
     "    return result\n",
     "\n",
@@ -204,11 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How to Bake Breads Without Baking Recipes\n",
+      "Breads, Pastries, Pies, and Cakes: Quantity Baking Recipes\n",
+      "Smith Pies: Best Pies in London\n",
+      "Numerical Recipes: The Art of Scientific Computing\n",
+      "Pastry: A Book of Best French Pastry Recipes\n"
+     ]
+    }
+   ],
    "source": [
     "# Probabilistic retrieval code\n",
     "\n",
@@ -217,35 +229,40 @@
     "\n",
     "# term frequency\n",
     "def tf(word, document):\n",
-    "    return ...\n",
+    "    frequency = document.count(word)\n",
+    "    return frequency / len(document)\n",
     "\n",
     "# collection size\n",
     "def collection_size(documents):\n",
-    "    cs = 0\n",
-    "    ...\n",
+    "    cs = 0 \n",
+    "    for document in documents:\n",
+    "        cs += len(document)\n",
     "    return cs\n",
     "\n",
     "# collection frequency\n",
     "def cf(word, documents):\n",
     "    cf = 0\n",
-    "    ...\n",
-    "    return ...\n",
+    "    for document in documents:\n",
+    "        cf += document.count(word)\n",
+    "    return cf / collection_size(documents)\n",
     "\n",
     "# probabilistic relevance\n",
-    "def query_prob(query, document):\n",
+    "def query_prob(query, document, documents):\n",
     "    prob = 1\n",
-    "    ...\n",
+    "    for vocab in query:\n",
+    "        prob *= ( (1-lmbda)*tf(vocab,document) + lmbda*cf(vocab,documents) )\n",
     "    return prob\n",
     "\n",
     "# computing the search result\n",
     "def search_prob(query, k):\n",
     "    q = query.split()\n",
     "    q = [stemmer.stem(w) for w in q]\n",
-    "    scores = [[query_prob(q, documents[d]),d] for d in range(len(documents))]\n",
+    "    scores = [[query_prob(q, documents[d], documents),d] for d in range(len(documents))]\n",
     "    scores.sort(key=lambda x: -x[0])\n",
     "    for i in range(k):\n",
     "            print(original_documents[scores[i][1]])\n",
     "\n",
+    "search_prob(\"Baking\",5)\n",
     "# HINTS\n",
     "# counting occurrences of a word in a document:\n",
     "#     document.count(word)\n",
