--Exercises: Attempt to answer 2.3

--- a/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
+++ b/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        " 'Fantastic! Primates Regain Control of Paralyzed Limb https://t.co/BtfMCSW0xP via @EPFL_en #VDtech https://t.co/EeK6g1Vnm5']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,6 +409,25 @@
     "    2. The merge can be accomplished in a number of steps linear in $L$, but a pointer may be forced to move to the left (i.e. backwards).\n",
     "    3. The merge can require $x \\times L$ steps in some cases."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer\n",
+    "1.D = {d2}\n",
+    "<br>2.1. Obama SLOP/1 Election: D = {d1, d2, d3} or {d3}\n",
+    "<br>2.2. Obama SLOP/2 Election: D = {d2}\n",
+    "<br>2.3. Obama SLOP/c Election: D={0}, for c>2\n",
+    "<br>3. B true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
