--- a/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
+++ b/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
@@ -29,9 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading of libraries and documents\n",
     "\n",
@@ -62,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How to Bake Breads Without Baking Recipes\n",
+      "Breads, Pastries, Pies, and Cakes: Quantity Baking Recipes\n",
+      "Smith Pies: Best Pies in London\n",
+      "Numerical Recipes: The Art of Scientific Computing\n",
+      "Pastry: A Book of Best French Pastry Recipes\n"
+     ]
+    }
+   ],
    "source": [
     "# TF/IDF code\n",
     "\n",
@@ -78,16 +103,19 @@
     "    idf = {}\n",
     "    num_documents = len(documents)\n",
     "    for i, term in enumerate(vocabulary):\n",
-    "        idf[term] = ...\n",
+    "        cnt = sum([1 for document in documents if term in document])\n",
+    "        idf[term] = math.log(num_documents/cnt,math.e)\n",
     "    return idf\n",
     "\n",
     "# Function to generate the vector for a document (with normalisation)\n",
     "def vectorize(document, vocabulary, idf):\n",
     "    vector = [0]*len(vocabulary)\n",
     "    counts = Counter(document)\n",
+    "\n",
     "    max_count = counts.most_common(1)[0][1]\n",
     "    for i,term in enumerate(vocabulary):\n",
-    "        vector[i] =  ...\n",
+    "        vector[i] =  counts[term] * idf[term] / max_count\n",
+    "    # Return the vector of vocabularies relative to the document\n",
     "    return vector\n",
     "\n",
     "# Compute IDF values and vectors\n",
@@ -105,7 +133,8 @@
     "    if sumxy == 0:\n",
     "            result = 0\n",
     "    else:\n",
-    "            result =  ...\n",
+    "            result =  sumxy / (math.sqrt(sumxx) + math.sqrt(sumyy))\n",
+    "    \n",
     "    return result\n",
     "\n",
     "# computing the search result (get the topk documents)\n",
@@ -118,6 +147,7 @@
     "    for i in range(topk):\n",
     "            print(original_documents[scores[i][1]])\n",
     "\n",
+    "search_vec(\"baking\",5)\n",
     "# HINTS\n",
     "# natural logarithm function\n",
     "#     math.log(n,math.e)\n",
@@ -129,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
