--Exercise3: Attempt to answer Task1

--- a/Exercises/03.Advanced_Information_Retrieval/Advanced_Information_Retrieval.ipynb
+++ b/Exercises/03.Advanced_Information_Retrieval/Advanced_Information_Retrieval.ipynb
@@ -49,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import Python matrix operations library\n",
@@ -75,7 +73,7 @@
     "M = np.array(M)\n",
     "\n",
     "# compute SVD\n",
-    "... = np.linalg.svd(...)"
+    "K, S, Dt = np.linalg.svd(M)"
    ]
   },
   {
@@ -92,15 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "K_sel = K[...]\n",
-    "S_sel = ...\n",
-    "Dt_sel = Dt[...]"
+    "K_sel = K[:,:2]\n",
+    "S_sel = S[:2]\n",
+    "Dt_sel = Dt[:2]"
    ]
   },
   {
@@ -150,6 +146,23 @@
     "Now, for the query $Q=$''<i>baking</i>'', find the top ranked documents according to LSI (use three singular values). \n",
     "\n",
     "<b>Hint:</b> Use the code for computing document_vectors from the last exercise. However note that document_vectors represent document-term matrix whereas LSI uses term-document matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1c\n",
+    "# Form q\n",
+    "q = np.transpose(np.array([[0,0,0,0,0,1,0,0,0,1,1]]))\n",
+    "\n",
+    "# Form S\n",
+    "S_1 = np.linalg.inv(np.diag(S_sel))\n",
+    "\n",
+    "# Calculate q_star\n",
+    "q_star = ((np.transpose(q)).dot(K_sel)).dot(S_1)"
    ]
   },
   {
@@ -205,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -246,9 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from tsne import bh_sne\n",
@@ -300,21 +309,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
