--- a/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
+++ b/Exercises/01.Vector_Space_Retrieval/Vector_Space_Retrieval.ipynb
@@ -250,7 +250,7 @@
     "def query_prob(query, document, documents):\n",
     "    prob = 1\n",
     "    for vocab in query:\n",
-    "        prob *= ( (1-lmbda)*tf(vocab,document) + lmbda*cf(vocab,documents) )\n",
+    "        prob *= ( lmbda*tf(vocab,document) + (1-lmbda)*cf(vocab,documents) )\n",
     "    return prob\n",
     "\n",
     "# computing the search result\n",
