--Exercise2: Somehow finish

--- a/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
+++ b/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
@@ -277,10 +277,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "# Tokenize, stem a document\n",
+    "def tokenize(text):\n",
+    "    text = \"\".join([ch for ch in text if ch not in string.punctuation])\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    return \" \".join([stemmer.stem(word.lower()) for word in tokens])\n",
+    "\n",
+    "# Read a list of documents from a file. Each line in a file is a document\n",
+    "with open(\"bread.txt\") as f:\n",
+    "# with open(\"epfldocs.txt\") as f:\n",
+    "    content = f.readlines()\n",
+    "original_documents = [x.strip() for x in content] \n",
+    "documents = [tokenize(d).split() for d in original_documents]\n",
+    "\n",
+    "# create the vocabulary\n",
+    "vocabulary = set([item for sublist in documents for item in sublist])\n",
+    "vocabulary = [word for word in vocabulary if word not in stopwords.words('english')]\n",
+    "vocabulary.sort()\n",
+    "\n",
+    "# compute IDF, storing idf values in a dictionary\n",
+    "def idf_values(vocabulary, documents):\n",
+    "    idf = {}\n",
+    "    num_documents = len(documents)\n",
+    "    for i, term in enumerate(vocabulary):\n",
+    "        idf[term] = math.log(num_documents/sum(term in document for document in documents), math.e)\n",
+    "    return idf\n",
+    "\n",
+    "# Function to generate the vector for a document (with normalisation)\n",
+    "def vectorize(document, vocabulary, idf):\n",
+    "    vector = [0]*len(vocabulary)\n",
+    "    counts = Counter(document)\n",
+    "    max_count = counts.most_common(1)[0][1]\n",
+    "    for i,term in enumerate(vocabulary):\n",
+    "        vector[i] = idf[term] * counts[term]/max_count\n",
+    "    return vector\n",
+    "\n",
+    "# Function to compute cosine similarity\n",
+    "def cosine_similarity(v1,v2):\n",
+    "    sumxx, sumxy, sumyy = 0, 0, 0\n",
+    "    for i in range(len(v1)):\n",
+    "        x = v1[i]; y = v2[i]\n",
+    "        sumxx += x*x\n",
+    "        sumyy += y*y\n",
+    "        sumxy += x*y\n",
+    "    if sumxy == 0:\n",
+    "            result = 0\n",
+    "    else:\n",
+    "            result = sumxy/math.sqrt(sumxx*sumyy)\n",
+    "    return result\n",
+    "\n",
+    "def vectorize_query(query, vocabulary, idf):\n",
+    "    q = query.split()\n",
+    "    q = [stemmer.stem(w) for w in q]\n",
+    "    query_vector = vectorize(q, vocabulary, idf)\n",
+    "    return query_vector\n",
+    "    \n",
+    "def search_vec(query, k):\n",
+    "    query_vector = vectorize_query(query, vocabulary, idf)\n",
+    "    scores = [[cosine_similarity(query_vector, document_vectors[d]), d] for d in range(len(documents))]\n",
+    "    scores.sort(key=lambda x: -x[0])\n",
+    "    ans = []\n",
+    "    indices = []\n",
+    "    for i in range(k):\n",
+    "        ans.append(original_documents[scores[i][1]])\n",
+    "        indices.append(scores[i][1])\n",
+    "    return ans, indices, query_vector\n",
+    "\n",
+    "# Compute IDF values and vectors\n",
+    "idf = idf_values(vocabulary, documents)\n",
+    "document_vectors = [vectorize(s, vocabulary, idf) for s in documents]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -306,14 +383,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3: 2, 2: 1, 0: 2, 1: 1}\n",
+      "{'recip': [(2, 0.22314355131420976), (3, 0.22314355131420976), (0, 0.11157177565710488), (4, 0.11157177565710488), (1, 0.0)], 'bread': [(3, 0.91629073187415511), (0, 0.45814536593707755), (1, 0.0), (2, 0.0), (4, 0.0)]}\n",
+      "{2: 1, 3: 2, 0: 2, 4: 1, 1: 1}\n",
       "[(3, 1.1394342831883648), (0, 0.56971714159418241)]\n",
       "Breads, Pastries, Pies, and Cakes: Quantity Baking Recipes\n",
       "How to Bake Breads Without Baking Recipes\n"
@@ -334,7 +412,8 @@
     "        if term in h:\n",
     "            posting_lists[term] = h[term]\n",
     "    \n",
-    "    max_len = len(documents)\n",
+    "    max_len = len(documents)        \n",
+    "    print(posting_lists)\n",
     "    \n",
     "    # Traverse the selected posting lists until we found k documents that appear in ALL posting lists\n",
     "    # This corresponds to phase 1 of Fagin's algorithm.\n",
@@ -345,10 +424,26 @@
     "    \n",
     "    documents_occurrences = {}\n",
     "\n",
-    "    ...\n",
-    "                \n",
-    "    print(documents_occurrences)\n",
+    "    dictlist = []\n",
+    "    for term in q:\n",
+    "        value = posting_lists[term]\n",
+    "        dictlist.append(value)\n",
     "        \n",
+    "    counter = 0\n",
+    "    # round-robin\n",
+    "    for i in range(len(dictlist[0])):\n",
+    "        for j in range(len(dictlist)):\n",
+    "            d = dictlist[j][i]\n",
+    "            if d[0] in documents_occurrences:\n",
+    "                documents_occurrences[d[0]] += 1\n",
+    "                counter += 1\n",
+    "            else:\n",
+    "                documents_occurrences[d[0]] = 1\n",
+    "            if counter == query_term_cnt:\n",
+    "                break\n",
+    "       \n",
+    "    print(documents_occurrences)\n",
+    "\n",
     "    # Retrieve for the found documents the tfidf values and add them up.\n",
     "    # For simplicity, we do not distinguish the cases whether the values have already been retrieved in the \n",
     "    # previous phase, or whether we use random access to obtain those values\n",
