--Exercise2: Task 2 Revision

--- a/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
+++ b/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
      "output_type": "stream",
      "text": [
       "{'recip': [(2, 0.22314355131420976), (3, 0.22314355131420976), (0, 0.11157177565710488), (4, 0.11157177565710488), (1, 0.0)], 'bread': [(3, 0.91629073187415511), (0, 0.45814536593707755), (1, 0.0), (2, 0.0), (4, 0.0)]}\n",
-      "{2: 1, 3: 2, 0: 2, 4: 1, 1: 1}\n",
+      "{2: 1, 3: 2, 0: 2, 1: 1}\n",
       "[(3, 1.1394342831883648), (0, 0.56971714159418241)]\n",
       "Breads, Pastries, Pies, and Cakes: Quantity Baking Recipes\n",
       "How to Bake Breads Without Baking Recipes\n"
@@ -424,23 +424,36 @@
     "    \n",
     "    documents_occurrences = {}\n",
     "\n",
-    "    dictlist = []\n",
-    "    for term in q:\n",
-    "        value = posting_lists[term]\n",
-    "        dictlist.append(value)\n",
+    "#     dictlist = []\n",
+    "#     for term in q:\n",
+    "#         value = posting_lists[term]\n",
+    "#         dictlist.append(value)\n",
     "        \n",
-    "    counter = 0\n",
-    "    # round-robin\n",
-    "    for i in range(len(dictlist[0])):\n",
-    "        for j in range(len(dictlist)):\n",
-    "            d = dictlist[j][i]\n",
-    "            if d[0] in documents_occurrences:\n",
-    "                documents_occurrences[d[0]] += 1\n",
-    "                counter += 1\n",
+    "#     counter = 0\n",
+    "#     # round-robin\n",
+    "#     for i in range(len(dictlist[0])):\n",
+    "#         for j in range(len(dictlist)):\n",
+    "#             d = dictlist[j][i]\n",
+    "#             if d[0] in documents_occurrences:\n",
+    "#                 documents_occurrences[d[0]] += 1\n",
+    "#                 counter += 1\n",
+    "#             else:\n",
+    "#                 documents_occurrences[d[0]] = 1\n",
+    "#             if counter == query_term_cnt:\n",
+    "#                 break\n",
+    "\n",
+    "    found_documents = 0\n",
+    "    for l in range(max_len):\n",
+    "        for term in q:\n",
+    "            d = posting_lists[term][l][0]\n",
+    "            if d in documents_occurrences.keys():\n",
+    "                documents_occurrences[d] += 1\n",
     "            else:\n",
-    "                documents_occurrences[d[0]] = 1\n",
-    "            if counter == query_term_cnt:\n",
-    "                break\n",
+    "                documents_occurrences[d] = 1\n",
+    "            if documents_occurrences[d] == query_term_cnt:\n",
+    "                found_documents += 1\n",
+    "        if found_documents == k:\n",
+    "            break\n",
     "       \n",
     "    print(documents_occurrences)\n",
     "\n",
