--Exercise3: Part 1 done

--- a/Exercises/03.Advanced_Information_Retrieval/Advanced_Information_Retrieval.ipynb
+++ b/Exercises/03.Advanced_Information_Retrieval/Advanced_Information_Retrieval.ipynb
@@ -49,9 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41291701, -0.12294407,  0.05933248, -0.03660797],\n",
+       "       [-0.3359611 ,  0.1962311 , -0.25246121,  0.11968319],\n",
+       "       [-0.07695592, -0.31917516,  0.31179369, -0.15629115],\n",
+       "       [-0.11909604,  0.2663899 ,  0.20432237, -0.52093504],\n",
+       "       [-0.07695592, -0.31917516,  0.31179369, -0.15629115],\n",
+       "       [-0.39922386, -0.49767812, -0.57172873,  0.04465203],\n",
+       "       [-0.41291701, -0.12294407,  0.05933248, -0.03660797],\n",
+       "       [-0.30751414, -0.01459992,  0.48607132,  0.40306708],\n",
+       "       [-0.07695592, -0.31917516,  0.31179369, -0.15629115],\n",
+       "       [-0.45505713,  0.462621  , -0.04813884, -0.40125186],\n",
+       "       [-0.23055822,  0.30457524,  0.17427762,  0.55935823]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import Python matrix operations library\n",
     "import numpy as np\n",
@@ -73,7 +94,9 @@
     "M = np.array(M)\n",
     "\n",
     "# compute SVD\n",
-    "K, S, Dt = np.linalg.svd(M)"
+    "K, S, Dt = np.linalg.svd(M, full_matrices=False)\n",
+    "\n",
+    "K"
    ]
   },
   {
@@ -90,13 +113,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.78695453,  2.31848919,  1.762346  ,  0.77705263])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "K_sel = K[:,:2]\n",
     "S_sel = S[:2]\n",
-    "Dt_sel = Dt[:2]"
+    "Dt_sel = Dt[:2,:]"
    ]
   },
   {
@@ -117,20 +160,119 @@
     "\n",
     "Map query $q$ into the new document space $D$. The new query is referred to as $q^*$. \n",
     "\n",
-    "<b>Hint:</b> Use the formulation for mapping queries provided in the lecture slides. You can also use np.linalg.inv function for computing the inverse of a matrix.\n",
+    "<b>Hint:</b> Use the formulation for mapping queries provided in the lecture slides. You can also use np.linalg.inv function for computing the inverse of a matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.22662409,  0.11624731])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1c\n",
+    "# Form q\n",
+    "q = np.array([0,0,0,0,0,1,0,0,0,1,1])\n",
     "\n",
+    "# Form S\n",
+    "S_1 = np.linalg.inv(np.diag(S_sel))\n",
+    "\n",
+    "# Calculate q_star\n",
+    "q_star = (q).dot(K_sel).dot(S_1)\n",
+    "q_star"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###  Question 1.d\n",
     "\n",
     "Arrange the documents based on the cosine similarity measure between $q^*$ and the new documents in the space $D$.\n",
     "\n",
-    "<b>Hint:</b> Use the cosine similarity function from the previous exercise on vector space retrieval.\n",
+    "<b>Hint:</b> Use the cosine similarity function from the previous exercise on vector space retrieval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0120579132787\n",
+      "0.938882772715\n",
+      "0.952477624421\n",
+      "0.593108626807\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
     "\n",
+    "# Function for computing cosine similarity.\n",
+    "def cosine_similarity(v1, v2):\n",
+    "    sumxx, sumxy, sumyy = 0, 0, 0\n",
+    "    for i in range(len(v1)):\n",
+    "        x = v1[i]; y = v2[i]\n",
+    "        sumxx += x*x\n",
+    "        sumyy += y*y\n",
+    "        sumxy += x*y\n",
+    "    return sumxy*1.0/math.sqrt(sumxx*sumyy)\n",
+    "\n",
+    "d1 = Dt_sel[:,0]\n",
+    "d2 = Dt_sel[:,1]\n",
+    "d3 = Dt_sel[:,2]\n",
+    "d4 = Dt_sel[:,3]\n",
+    "\n",
+    "cos1 = cosine_similarity(q_star,d1)\n",
+    "cos2 = cosine_similarity(q_star,d2)\n",
+    "cos3 = cosine_similarity(q_star,d3)\n",
+    "cos4 = cosine_similarity(q_star,d4)\n",
+    "\n",
+    "print(cos1) \n",
+    "print(cos2)\n",
+    "print(cos3)\n",
+    "print(cos4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrangement: D3 > D2 > D4 > D1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###  Question 1.e\n",
     "\n",
     "Does the order of documents change if document $d_3$ is dropped? If yes, why? \n",
     "If no, how should $d_3$ be modified to change the document ordering?\n",
     "\n",
+    "<br><b>No</b> because D3 is aligned with D2 and D4 (similar magnitude). Removing D3 does not significantly change term space (K) and document space (D) of SVD.\n",
     "\n",
+    "<br><b>To change this</b>, define such D3 that goes in different direction compared with D2 and D4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 1.f [Optional]\n",
     "\n",
     "Run latent semantic indexing for the document collection presented in the previous exercise (presented here as well):\n",
@@ -150,19 +292,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/sanadhisutandi/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "import nltk\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
+    "import string\n",
+    "from nltk.corpus import stopwords\n",
+    "import math\n",
+    "from collections import Counter\n",
+    "nltk.download('stopwords')\n",
+    "import numpy as np\n",
+    "\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "# Tokenize, stem a document\n",
+    "def tokenize(text):\n",
+    "    text = \"\".join([ch for ch in text if ch not in string.punctuation])\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    return \" \".join([stemmer.stem(word.lower()) for word in tokens])\n",
+    "\n",
+    "# Read a list of documents from a file. Each line in a file is a document\n",
+    "with open(\"bread.txt\") as f:\n",
+    "# with open(\"epfldocs.txt\") as f:\n",
+    "    content = f.readlines()\n",
+    "original_documents = [x.strip() for x in content] \n",
+    "documents = [tokenize(d).split() for d in original_documents]\n",
+    "\n",
+    "# create the vocabulary\n",
+    "vocabulary = set([item for sublist in documents for item in sublist])\n",
+    "vocabulary = [word for word in vocabulary if word not in stopwords.words('english')]\n",
+    "vocabulary.sort()\n",
+    "\n",
+    "# compute IDF, storing idf values in a dictionary\n",
+    "def idf_values(vocabulary, documents):\n",
+    "    idf = {}\n",
+    "    num_documents = len(documents)\n",
+    "    for i, term in enumerate(vocabulary):\n",
+    "        idf[term] = math.log(num_documents/sum(term in document for document in documents), math.e)\n",
+    "    return idf\n",
+    "\n",
+    "# Function to generate the vector for a document (with normalisation)\n",
+    "def vectorize(document, vocabulary, idf):\n",
+    "    vector = [0]*len(vocabulary)\n",
+    "    counts = Counter(document)\n",
+    "    max_count = counts.most_common(1)[0][1]\n",
+    "    for i,term in enumerate(vocabulary):\n",
+    "        vector[i] = idf[term] * counts[term]/max_count\n",
+    "    return vector\n",
+    "\n",
+    "def vectorize_query(query, vocabulary, idf):\n",
+    "    q = query.split()\n",
+    "    q = [stemmer.stem(w) for w in q]\n",
+    "    query_vector = vectorize(q, vocabulary, idf)\n",
+    "    return query_vector\n",
+    "\n",
+    "# Compute IDF values and vectors\n",
+    "idf = idf_values(vocabulary, documents)\n",
+    "document_vectors = [vectorize(s, vocabulary, idf) for s in documents]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1c\n",
-    "# Form q\n",
-    "q = np.transpose(np.array([[0,0,0,0,0,1,0,0,0,1,1]]))\n",
+    "M = np.transpose(np.array(document_vectors))\n",
     "\n",
+    "# compute SVD\n",
+    "K, S, Dt = np.linalg.svd(M, full_matrices=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_sel = K[:,:3]\n",
+    "S_sel = S[:3]\n",
+    "Dt_sel = Dt[:3,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['art',\n",
+       " 'bake',\n",
+       " 'best',\n",
+       " 'book',\n",
+       " 'bread',\n",
+       " 'cake',\n",
+       " 'comput',\n",
+       " 'french',\n",
+       " 'london',\n",
+       " 'numer',\n",
+       " 'pastri',\n",
+       " 'pie',\n",
+       " 'quantiti',\n",
+       " 'recip',\n",
+       " 'scientif',\n",
+       " 'smith',\n",
+       " 'without']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Forming q\n",
+    "# Check Vocabulary\n",
+    "vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forming q\n",
+    "# Forming vector 0 with size of vocabulary\n",
+    "q = np.array([0]*len(vocabulary))\n",
+    "\n",
+    "# bake is 2nd element -> index 1\n",
+    "q[1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00416487,  0.11537136, -0.14603541])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Form S\n",
     "S_1 = np.linalg.inv(np.diag(S_sel))\n",
     "\n",
     "# Calculate q_star\n",
-    "q_star = ((np.transpose(q)).dot(K_sel)).dot(S_1)"
+    "q_star = (q).dot(K_sel).dot(S_1)\n",
+    "q_star"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.998051867877\n",
+      "-0.657760956636\n",
+      "-0.00232887505297\n",
+      "0.723107878968\n",
+      "-0.655106291136\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate using approach in 1d\n",
+    "import math\n",
+    "\n",
+    "# Function for computing cosine similarity.\n",
+    "def cosine_similarity(v1, v2):\n",
+    "    sumxx, sumxy, sumyy = 0, 0, 0\n",
+    "    for i in range(len(v1)):\n",
+    "        x = v1[i]; y = v2[i]\n",
+    "        sumxx += x*x\n",
+    "        sumyy += y*y\n",
+    "        sumxy += x*y\n",
+    "    return sumxy*1.0/math.sqrt(sumxx*sumyy)\n",
+    "\n",
+    "d1 = Dt_sel[:,0]\n",
+    "d2 = Dt_sel[:,1]\n",
+    "d3 = Dt_sel[:,2]\n",
+    "d4 = Dt_sel[:,3]\n",
+    "d5 = Dt_sel[:,4]\n",
+    "\n",
+    "cos1 = cosine_similarity(q_star,d1)\n",
+    "cos2 = cosine_similarity(q_star,d2)\n",
+    "cos3 = cosine_similarity(q_star,d3)\n",
+    "cos4 = cosine_similarity(q_star,d4)\n",
+    "cos5 = cosine_similarity(q_star,d5)\n",
+    "\n",
+    "print(cos1) \n",
+    "print(cos2)\n",
+    "print(cos3)\n",
+    "print(cos4)\n",
+    "print(cos5)"
    ]
   },
   {
