--Exercise2: Task 3 Done

--- a/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
+++ b/Exercises/02.Query_Expansion_Indexing/query_expansion_indexing.ipynb
@@ -523,11 +523,13 @@
    "metadata": {},
    "source": [
     "### Answer\n",
-    "1.D = {d2}\n",
-    "<br>2.1. Obama SLOP/1 Election: D = {d1, d2, d3} or {d3}\n",
-    "<br>2.2. Obama SLOP/2 Election: D = {d2}\n",
-    "<br>2.3. Obama SLOP/c Election: D={0}, for c>2\n",
-    "<br>3. B true"
+    "#### Note: Sequence matters => For SLOP/1 terms have to be next to each other.\n",
+    "1.D = {d1,d3}\n",
+    "<br>2.1. Obama SLOP/1 Election: D = {d3}\n",
+    "<br>2.2. Obama SLOP/2 Election: D = {d1,d3}\n",
+    "<br>2.3. Obama SLOP/5 Election: D = {d1, d2, d3}\n",
+    "<br> so x=1,2,5\n",
+    "<br>3. i : {{ Linear search to find occurences of term p, q based on given pointer value, pointer may refer to index where p and q occurs }}"
    ]
   },
   {
@@ -535,7 +537,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Algortihm\n",
+    "\n",
+    "pointer = *(location) // return index\n",
+    "p = (first)term1\n",
+    "q = (first)term2\n",
+    "x = distance\n",
+    "\n",
+    "found = false\n",
+    "while not end of document:\n",
+    "    if abs(pointer(p)-pointer(q)) <= x:\n",
+    "        found = true\n",
+    "        break\n",
+    "    if (pointer(p) <= pointer(q)):\n",
+    "        p = (next) term1\n",
+    "    else:\n",
+    "        q = (next) term2\n",
+    "    if p or q is null:\n",
+    "        break\n",
+    "\n",
+    "return found"
+   ]
   }
  ],
  "metadata": {
