--- a/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
+++ b/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
@@ -10,11 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1-norm of [1 2 3] is [0.16666667 0.33333333 0.5       ]\n",
+      "L2-norm of [1 2 3] is [0.26726124 0.53452248 0.80178373]\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function, division\n",
     "import numpy as np\n",
@@ -53,36 +60,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Implement your code here\n",
     "def pagerank_eigen(L):\n",
     "#   Construct transition probability matrix from L\n",
-    "    R = ...\n",
+    "    \n",
+    "    X = np.sum(L,axis=0)\n",
+    "    R = np.zeros([L.shape[0],L.shape[1]])\n",
+    "    \n",
+    "    for i in range(R.shape[0]):\n",
+    "        for j in range(R.shape[1]):\n",
+    "            R[i,j] = 1 / X[0,j] if X[0,j] != 0 else 0\n",
+    "    \n",
+    "    R = np.multiply(R,L)\n",
     "#     Compute eigen-vectors and eigen-values of R\n",
-    "    eigenvalues, eigenvectors = ...\n",
+    "    eigenvalues, eigenvectors = np.linalg.eig(R)\n",
     "#     Take the eigen-vector with maximum eigven-value\n",
-    "    p = ...\n",
+    "    p = eigenvectors[:,np.argmax(eigenvalues)]\n",
     "    return (R,p)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.Link page A to page B.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[[0 0 0]\n",
+      " [1 0 0]\n",
+      " [0 0 0]]\n",
+      "R=[[0. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "p=[[0.]\n",
+      " [1.]\n",
+      " [0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with the question, e.g.\n",
+    "L = np.matrix([\n",
+    "    [0,0,0], \n",
+    "    [1,0,0], \n",
+    "    [0,0,0]\n",
+    "])\n",
+    "R,p = pagerank_eigen(L)\n",
+    "print(\"L={0}\\nR={1}\\np={2}\".format(L,R,p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.Link all pages to each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[[0 1 1]\n",
+      " [1 0 1]\n",
+      " [1 1 0]]\n",
+      "R=[[0.  0.5 0.5]\n",
+      " [0.5 0.  0.5]\n",
+      " [0.5 0.5 0. ]]\n",
+      "p=[[0.57735027]\n",
+      " [0.57735027]\n",
+      " [0.57735027]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Test with the question, e.g.\n",
     "L = np.matrix([\n",
     "    [0,1,1], \n",
     "    [1,0,1], \n",
     "    [1,1,0]\n",
+    "])\n",
+    "R,p = pagerank_eigen(L)\n",
+    "print(\"L={0}\\nR={1}\\np={2}\".format(L,R,p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.Link page A to both B and C, and link pages B and C to A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[[0 1 1]\n",
+      " [1 0 0]\n",
+      " [1 0 0]]\n",
+      "R=[[0.  1.  1. ]\n",
+      " [0.5 0.  0. ]\n",
+      " [0.5 0.  0. ]]\n",
+      "p=[[0.81649658]\n",
+      " [0.40824829]\n",
+      " [0.40824829]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with the question, e.g.\n",
+    "L = np.matrix([\n",
+    "    [0,1,1], \n",
+    "    [1,0,0], \n",
+    "    [1,0,0]\n",
+    "])\n",
+    "R,p = pagerank_eigen(L)\n",
+    "print(\"L={0}\\nR={1}\\np={2}\".format(L,R,p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.Use the previous links and add a link from page C to page B."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L=[[0 1 1]\n",
+      " [1 0 1]\n",
+      " [1 0 0]]\n",
+      "R=[[0.  1.  0.5]\n",
+      " [0.5 0.  0.5]\n",
+      " [0.5 0.  0. ]]\n",
+      "p=[[-0.74278135+0.j]\n",
+      " [-0.55708601+0.j]\n",
+      " [-0.37139068+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with the question, e.g.\n",
+    "L = np.matrix([\n",
+    "    [0,1,1], \n",
+    "    [1,0,1], \n",
+    "    [1,0,0]\n",
     "])\n",
     "R,p = pagerank_eigen(L)\n",
     "print(\"L={0}\\nR={1}\\np={2}\".format(L,R,p))"
@@ -103,15 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "def matrixR(L):\n",
+    "#   Construct transition probability matrix from L\n",
+    "    return np.multiply(1/np.sum(L,axis=0),L)\n",
+    "\n",
     "def pagerank_iterative(L):\n",
-    "    R = ...\n",
-    "    N = L.shape(0)\n",
+    "    R = matrixR(L)\n",
+    "    N = R.shape[0]\n",
     "    e = np.ones(shape=(N,1))\n",
     "    q = 0.9\n",
     "\n",
@@ -121,9 +274,9 @@
     "    i = 0\n",
     "    while delta > epsilon:\n",
     "        p_prev = p\n",
-    "        p = ...\n",
-    "        p = p + ...\n",
-    "        delta = ...\n",
+    "        p = q * R.dot(p_prev)\n",
+    "        p = p + e*(1-q)/N\n",
+    "        delta = np.absolute(np.linalg.norm(p-p_prev,1))\n",
     "        i += 1\n",
     "\n",
     "    print(\"Converged after {0} iterations. Ranking vector: p={1}\".format(i, p[:,0]))\n",
@@ -139,28 +292,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5242\n",
+      "[3466, 937, 5233]\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct link matrix from file\n",
-    "f = open(\"ca-GrQc.txt\")\n",
-    "L = ..."
+    "n_nodes = 0\n",
+    "nodes_idx = {}\n",
+    "nodes = []\n",
+    "with open(\"ca-GrQc.txt\") as f:\n",
+    "    for idx, line in enumerate(f):\n",
+    "        if (idx>3):\n",
+    "            source = int(line.split()[0])\n",
+    "            dest   = int(line.split()[1])\n",
+    "            if source not in nodes_idx.keys():\n",
+    "                nodes_idx[source] = n_nodes\n",
+    "                nodes.append(source)\n",
+    "                n_nodes += 1\n",
+    "            if dest not in nodes_idx.keys():\n",
+    "                nodes_idx[dest] = n_nodes\n",
+    "                nodes.append(dest)\n",
+    "                n_nodes += 1\n",
+    "\n",
+    "print(n_nodes)\n",
+    "print(nodes[:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 1. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 1. 1.]\n",
+      " [0. 0. 0. ... 1. 0. 1.]\n",
+      " [0. 0. 0. ... 1. 1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construct L\n",
+    "L = np.zeros([n_nodes,n_nodes])\n",
+    "with open(\"ca-GrQc.txt\") as f:\n",
+    "    for idx, line in enumerate(f):\n",
+    "        if (idx>3):\n",
+    "            source = int(line.split()[0])\n",
+    "            dest   = int(line.split()[1])\n",
+    "            L[nodes_idx[dest],nodes_idx[source]] = 1\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged after 128 iterations. Ranking vector: p=[2.91315639e-04 1.88382754e-04 8.39741651e-05 ... 1.92156702e-04\n",
+      " 1.92156702e-04 1.92156702e-04]\n",
+      "Ranking vector: p=[2.91315639e-04 1.88382754e-04 8.39741651e-05 ... 1.92156702e-04\n",
+      " 1.92156702e-04 1.92156702e-04]\n"
+     ]
+    }
+   ],
    "source": [
     "# Run PageRank\n",
     "R, p = pagerank_iterative(L)\n",
     "print(\"Ranking vector: p={0}\".format(p[:,0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.    0.2   0.5   ... 0.    0.    0.   ]\n",
+      " [0.125 0.    0.    ... 0.    0.    0.   ]\n",
+      " [0.125 0.    0.    ... 0.    0.    0.   ]\n",
+      " ...\n",
+      " [0.    0.    0.    ... 0.    0.5   0.5  ]\n",
+      " [0.    0.    0.    ... 0.5   0.    0.5  ]\n",
+      " [0.    0.    0.    ... 0.5   0.5   0.   ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00019216]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p[-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top-3 nodes: [14265 13801 13929]\n",
+      "Their scores: [0.00144951 0.00141553 0.00138011]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array(p[:,0])\n",
+    "k = 3\n",
+    "# argsort -> sort index by value\n",
+    "# [-k:] pick last k element\n",
+    "# [::-1] reverse\n",
+    "k_idx = arr.argsort()[-k:][::-1]\n",
+    "print(\"Top-{0} nodes: {1}\".format(k, np.array(nodes)[k_idx]))\n",
+    "print(\"Their scores: {0}\".format(arr[k_idx]))"
    ]
   },
   {
@@ -223,9 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# You can implement your code following this template.\n",
@@ -249,23 +532,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:anaconda]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-anaconda-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
