--- a/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
+++ b/Exercises/04.Link_Based_Ranking/link_ranking.ipynb
@@ -492,10 +492,7 @@
     "\n",
     "Calculate the authority and hub scores for this graph using the\n",
     "HITS algorithm with k = 6, and identify the best authority and\n",
-    "hub nodes.\n",
-    "\n",
-    "### b)\n",
-    "Apply the HITS algorithm to the dataset: https://snap.stanford.edu/data/ca-GrQc.html"
+    "hub nodes."
    ]
   },
   {
@@ -507,11 +504,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You can implement your code following this template.\n",
+    "# Refer to slide, page 28\n",
     "def hits_iterative(A, k=10):\n",
     "    N = A.shape[0]\n",
     "\n",
@@ -519,14 +517,215 @@
     "\n",
     "    xprev, yprev = x0, y0\n",
     "    \n",
-    "    # For advanced exercise: define a convergence condition instead of k iterations\n",
-    "    for l in range(0,k):\n",
-    "        y = ...\n",
-    "        x = ...\n",
-    "        xprev = ...\n",
-    "        yprev = ...\n",
+    "    delta1 = delta2 = 1\n",
+    "    epsilon = 0.001 # We can strictly check for convergence rate of HITS algorithm\n",
+    "    l = 0\n",
+    "    while l < k and delta1 > epsilon and delta2 > epsilon:\n",
+    "        y = np.matmul(A, xprev)\n",
+    "        x = np.matmul(np.transpose(A), yprev)\n",
+    "        x = x / np.linalg.norm(x,2)\n",
+    "        y = y / np.linalg.norm(y,2)\n",
+    "        delta1 = np.linalg.norm(x-xprev,1)\n",
+    "        delta2 = np.linalg.norm(y-yprev,1)\n",
+    "        xprev = x\n",
+    "        yprev = y\n",
+    "        l += 1\n",
     "        \n",
     "    return xprev, yprev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([\n",
+    "    [0,1,1,1],\n",
+    "    [0,0,1,1],\n",
+    "    [1,0,0,1],\n",
+    "    [0,0,0,1]\n",
+    "             ])\n",
+    "\n",
+    "# authority = target -> column (transposed)\n",
+    "# hub = link (source) -> row\n",
+    "authority, hub = hits_iterative(A,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.16887796, 0.27257494, 0.49774555, 0.80587375])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Authority\n",
+    "authority"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.65357971, 0.54153747, 0.40815386, 0.33612671])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hub\n",
+    "hub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b)\n",
+    "Apply the HITS algorithm to the dataset: https://snap.stanford.edu/data/ca-GrQc.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 1. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 1. 1.]\n",
+      " [0. 0. 0. ... 1. 0. 1.]\n",
+      " [0. 0. 0. ... 1. 1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.transpose(L)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# authority = target -> column (transposed)\n",
+    "# hub = link (source) -> row\n",
+    "authority, hub = hits_iterative(A,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.48948810e-05, 1.45965389e-05, 6.68131703e-06, ...,\n",
+       "       1.28245551e-54, 1.28245551e-54, 1.28245551e-54])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Authority\n",
+    "authority"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.48948810e-05, 1.45965389e-05, 6.68131703e-06, ...,\n",
+       "       1.28245551e-54, 1.28245551e-54, 1.28245551e-54])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hub\n",
+    "hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top-3 authorities: [21012  2741 12365]\n",
+      "Their scores: [0.15556238 0.15357488 0.15307255]\n",
+      "Top-3 hubs: [21012  2741 12365]\n",
+      "Their scores: [0.15556238 0.15357488 0.15307255]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 3\n",
+    "\n",
+    "arr = np.array(authority)\n",
+    "k_idx = arr.argsort()[-k:][::-1]\n",
+    "print(\"Top-{0} authorities: {1}\".format(k, np.array(nodes)[k_idx]))\n",
+    "print(\"Their scores: {0}\".format(arr[k_idx]))\n",
+    "\n",
+    "arr = np.array(hub)\n",
+    "k_idx = arr.argsort()[-k:][::-1]\n",
+    "print(\"Top-{0} hubs: {1}\".format(k, np.array(nodes)[k_idx]))\n",
+    "print(\"Their scores: {0}\".format(arr[k_idx]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The authorities and hubs vector are the same -> network must be undirected graph (all edges are bidirectional)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We can also use linear algebra property of HITS to compute the result (slide \"Convergence of HITS\"):**.\n",
+    "  \n",
+    "+ $x^*$ is the principal eigenvector (i.e. with largest eigenvalue) of $A^t A$\n",
+    "+ $y^*$ is the principal eigenvector (i.e. with largest eigenvalue) of $A A^t$"
    ]
   }
  ],
